Updated nav menu

--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,7 @@ description: Dungeons & Dragons House Rules
 minima:
   skin: auto
   nav-pages:
+    - README.md
+    - README.md#Character-Creation
+    - background.md
+    - equipmentupgrades.md
