--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Purple Hack
 description: Dungeons & Dragons House Rules
 minima:
   skin: auto
-  nav-pages:
+  nav_pages:
     - README.md
     - background.md
     - equipmentupgrades.md
